--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=EMxTIxqJ4B4" target="_blank">
-                    <img src="https://i.ytimg.com/vi/EMxTIxqJ4B4/mqdefault.jpg" alt="Try not to Cringe: MEN">
+                    <img src="https://i.ytimg.com/vi/EMxTIxqJ4B4/mqdefault.jpg" alt="Try not to Laugh: MEN">
                     <div class="video-info">
-                        <h3>Try not to Cringe: MEN</h3>
+                        <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
                         <div class="date">2 hours ago</div>
                     </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>These Reddit Recipes are Horrible</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10224,9 +10224,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=EMxTIxqJ4B4" target="_blank">
-                        <img src="https://i.ytimg.com/vi/EMxTIxqJ4B4/mqdefault.jpg" alt="Try not to Cringe: MEN">
+                        <img src="https://i.ytimg.com/vi/EMxTIxqJ4B4/mqdefault.jpg" alt="Try not to Laugh: MEN">
                         <div class="video-info">
-                            <h3>Try not to Cringe: MEN</h3>
+                            <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
                             <div class="date">2 hours ago</div>
                         </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>These Reddit Recipes are Horrible</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
