--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Problem With Average True Range No One Talks About</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>These Reddit Recipes are Horrible</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Can You Guess What He's Thinking?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>5 reasons why I shorted the S&P...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Three I’s of Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2578,7 +2578,7 @@
                     <div class="video-info">
                         <h3>5 Simple Japanese habits for Your Calm & Positive Living</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 18, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>The Problem With Average True Range No One Talks About</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>5 reasons why I shorted the S&P...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>Three I’s of Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8934,7 +8934,7 @@
                         <div class="video-info">
                             <h3>5 Simple Japanese habits for Your Calm & Positive Living</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 18, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>These Reddit Recipes are Horrible</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>Can You Guess What He's Thinking?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
