--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Problem With Average True Range No One Talks About</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>If You're Seeking Truth... | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2490,7 +2490,7 @@
                     <div class="video-info">
                         <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>The Problem With Average True Range No One Talks About</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6612,7 +6612,7 @@
                         <div class="video-info">
                             <h3>Trade Like (And Beat?) a U.S. Investing Championships Superstar</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Ojas Can Fundamentally Transform Your Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7993,7 +7993,7 @@
                         <div class="video-info">
                             <h3>If You're Seeking Truth... | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
