--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Try not to Laugh: MEN</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1038,7 +1038,7 @@
                     <div class="video-info">
                         <h3>Why Exits Are Harder Than Entries in Trading 😬</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2204,7 +2204,7 @@
                     <div class="video-info">
                         <h3>What if you took 1000 trades?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2464,9 +2464,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
+                    <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
                     <div class="video-info">
-                        <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
+                        <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">3 weeks ago</div>
                     </div>
@@ -5996,7 +5996,7 @@
                         <div class="video-info">
                             <h3>Why Exits Are Harder Than Entries in Trading 😬</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -6436,7 +6436,7 @@
                         <div class="video-info">
                             <h3>What if you took 1000 trades?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Are You Tolerating or Accepting People? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - A Lot for Which to Be Thankful</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10086,9 +10086,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=81ZPu4II1nQ" target="_blank">
-                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth">
+                        <img src="https://i.ytimg.com/vi/81ZPu4II1nQ/mqdefault.jpg" alt="Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!">
                         <div class="video-info">
-                            <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
+                            <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">3 weeks ago</div>
                         </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Try not to Laugh: MEN</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
