--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">18 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">55 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Can You Guess What He's Thinking?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -620,7 +620,7 @@
                     <div class="video-info">
                         <h3>Algorithmic Trading: Disadvantages & Avoiding Common Pitfalls #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -917,7 +917,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1038,7 +1038,7 @@
                     <div class="video-info">
                         <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Get My Trading Strategies & Code: Exclusive Access! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">18 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">55 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5842,7 +5842,7 @@
                         <div class="video-info">
                             <h3>Algorithmic Trading: Disadvantages & Avoiding Common Pitfalls #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5974,7 +5974,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5996,7 +5996,7 @@
                         <div class="video-info">
                             <h3>What's the Chance the Market Closes Red After a Gap Down?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Nature Silences the Mind</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>Can You Guess What He's Thinking?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
