--- a/index.html
+++ b/index.html
@@ -2195,7 +2195,7 @@
                     <div class="video-info">
                         <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -3687,9 +3687,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=oCwDRkSorOg" target="_blank">
-                    <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"">
+                    <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.">
                     <div class="video-info">
-                        <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
+                        <h3>He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.</h3>
                         <div class="channel">SagutoGolf</div>
                         <div class="date">Sep 08, 2025</div>
                     </div>
@@ -10211,9 +10211,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=oCwDRkSorOg" target="_blank">
-                        <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"">
+                        <img src="https://i.ytimg.com/vi/oCwDRkSorOg/mqdefault.jpg" alt="He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.">
                         <div class="video-info">
-                            <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
+                            <h3>He used to shoot high 80s. Now he shoots low 70s. One lesson did this to him.</h3>
                             <div class="channel">SagutoGolf</div>
                             <div class="date">Sep 08, 2025</div>
                         </div>
@@ -10826,7 +10826,7 @@
                         <div class="video-info">
                             <h3>🔴 Battlefield 6 BATTLE ROYALE IS HERE!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
